Configurações da pasta public

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
+    <link rel=”manifest” href=”%PUBLIC_URL%/manifest.json”>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <title>BuscaSenadores</title>
+    <title>Busca Parlamentar</title>
   </head>
   <body>
     <noscript>É necessário habilitar o JavaScript para visualizar essa página.</noscript>
